// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBar.vue renders the component 1`] = `
<div
  class="flex flex-col md:flex-row w-full justify-between items-center"
>
  <!--v-if-->
  <div
    class="flex items-center mt-4 md:mt-0 w-full md:w-auto"
  >
    <input
      class="rounded-md p-4 bg-website-background w-full border border-primary focus:border-primary"
      placeholder="Search"
    />
  </div>
</div>
`;

exports[`FilterBar.vue shows sort options when property is passed 1`] = `
<div
  class="flex flex-col md:flex-row w-full justify-between items-center"
>
  <div
    class="flex gap-4 items-center w-full md:w-auto"
  >
    <h5
      class="font-extrabold text-start"
    >
      Sort:
    </h5>
    <select
      class="mt-2 p-4 bg-website-background border border-primary rounded-md cursor-pointer grow"
    >
      
      <option>
        name-asc
      </option>
      <option>
        price-desc
      </option>
      
    </select>
  </div>
  <div
    class="flex items-center mt-4 md:mt-0 w-full md:w-auto"
  >
    <input
      class="rounded-md p-4 bg-website-background w-full border border-primary focus:border-primary"
      placeholder="Search"
    />
  </div>
</div>
`;
